# test-ghac

./: CMakeLists.txt  example.cpp  pyproject.toml
.github/workflows/: build.yml  cmake-multi-platform.yml  main.yml
