[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "."

[project]
name = "example"
version = "0.1.0"
description = "Example Pybind11 module"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
requires-python = "==3.12.*"
dependencies = [
    "cibuildwheel>=3.1.1",
]
